Mongodb.txt
Microsoft Windows [Version 10.0.26100.6584]
(c) Microsoft Corporation. All rights reserved.

C:\Users\Kishore M>mongosh
Current Mongosh Log ID: 69393325d5f7c18c211e2620
Connecting to:          mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.5.10
Using MongoDB:          8.2.2
Using Mongosh:          2.5.10

For mongosh info see: https://www.mongodb.com/docs/mongodb-shell/

------
   The server generated these startup warnings when booting
   2025-12-08T17:47:29.600+05:30: Access control is not enabled for the database. Read and write access to data and configuration is unrestricted
------

test> show dbs
admin   40.00 KiB
config  72.00 KiB
local   72.00 KiB
test> use employees
switched to db employees
employees> show collections

employees> db.createCollection("department")
{ ok: 1 }
employees> db.departments.insertone({ name :"Human Resources", head:"john Doe ", employees:12})
TypeError: db.departments.insertone is not a function
employees> show collections
department
employees> db.departments.insertOne({ name :"Human Resources", head:"john Doe ", employees:12})
{
  acknowledged: true,
  insertedId: ObjectId('693937c2d5f7c18c211e2621')
}
employees> db.department.find()

employees> db.department.insertOne({ name:"CTO",head:"Kishore",employees:1})
{
  acknowledged: true,
  insertedId: ObjectId('69393870d5f7c18c211e2622')
}
employees> db.department.find()
[
  {
    _id: ObjectId('69393870d5f7c18c211e2622'),
    name: 'CTO',
    head: 'Kishore',
    employees: 1
  }
]
employees> db.department.findOne()
{
  _id: ObjectId('69393870d5f7c18c211e2622'),
  name: 'CTO',
  head: 'Kishore',
  employees: 1
}
employees> db.department.find().limit(1)
[
  {
    _id: ObjectId('69393870d5f7c18c211e2622'),
    name: 'CTO',
    head: 'Kishore',
    employees: 1
  }
]
employees> db.department.find().sort({ employees: -1 }).limit(1)
[
  {
    _id: ObjectId('69393870d5f7c18c211e2622'),
    name: 'CTO',
    head: 'Kishore',
    employees: 1
  }
]
employees> db.department.find()
[
  {
    _id: ObjectId('69393870d5f7c18c211e2622'),
    name: 'CTO',
    head: 'Kishore',
    employees: 1
  }
]
employees> db.department.insertOne({name :"CEO",head:"Adhesh", employees:2})
{
  acknowledged: true,
  insertedId: ObjectId('69393943d5f7c18c211e2623')
}
employees> db.department.find()
[
  {
    _id: ObjectId('69393870d5f7c18c211e2622'),
    name: 'CTO',
    head: 'Kishore',
    employees: 1
  },
  {
    _id: ObjectId('69393943d5f7c18c211e2623'),
    name: 'CEO',
    head: 'Adhesh',
    employees: 2
  }
]
employees> db.department.updateOne({name:"CTO"},{&set:{head:"Kishore M"}})
Uncaught:
SyntaxError: Unexpected token (1:38)

> 1 | db.department.updateOne({name:"CTO"},{&set:{head:"Kishore M"}})
    |                                       ^
  2 |

employees> db.department.updateOne({name:"CTO"},{$set:{head:"Kishore M"}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
employees> db.department.find()
[
  {
    _id: ObjectId('69393870d5f7c18c211e2622'),
    name: 'CTO',
    head: 'Kishore M',
    employees: 1
  },
  {
    _id: ObjectId('69393943d5f7c18c211e2623'),
    name: 'CEO',
    head: 'Adhesh',
    employees: 2
  }
]
employees>
